# internal/jobs/types.go
@@ -49,10 +49,12 @@ type ActiveWorkflowStep struct {
 }
 
 type ActiveJobStep struct {
-	Index         int    `json:"index"`
-	Total         int    `json:"total"`
-	Action        string `json:"action"`
-	TargetStackID string `json:"target_stack_id,omitempty"`
+	Index              int      `json:"index"`
+	Total              int      `json:"total"`
+	Action             string   `json:"action"`
+	State              string   `json:"state,omitempty"`
+	TargetStackID      string   `json:"target_stack_id,omitempty"`
+	TargetServiceNames []string `json:"target_service_names,omitempty"`
 }
 
 type ActiveJobEvent struct {
